# ginz-cli

./: GInt.toml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-ci.yml
ginz/: __main__.py  tree.py
ginz.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ginz/lockfile/: __init__.py
test/: Ginz-lock.toml  Ginz.toml  ginz-lock.toml
